      instead of assuming that every page has the SEE ALSO section.
    - Explicitly mention that Dpkg::Checksums::add_from_file() is used to
      verify digests too. Prompted by Johannes Schauer <josch@debian.org>.
    - Document the behavior for consecutive calls to Dpkg perl module parse()
      methods. Prompted by Johannes Schauer <josch@debian.org>.
  * Build system:
    - Add support for profiling perl modules.
    - Clean up compiler and linker automatic flag usage in configure.
    - Fix the __progname check to avoid the optimizer discarding the symbol.
    - Fix M4sh/Autoconf coding style. Add a new section to coding-style.txt
      describing M4sh/Autoconf.
    - Disable C++ exceptions for dselect.
    - Fix typo in SE Linux library detection code, only affecting static
      mode (not used in Debian). Regression introduced in dpkg 1.18.8.
    - Change --with-* option logic to default to check.
    - Disable -Wtautological-constant-out-of-range-compare (for clang).
    - Check the availability of -W<warning> variant instead of -Wno-<warning>.
      As at least gcc and clang do not warn on -Wno-* warning flags, only
      when some unrelated warning needs to be emitted.
    - Bump po4a version to 0.43 (we are using --porefs wrap option).
    - Add support for running the test suite in parallel.
    - Specify exec argument for TAP::Harness to gracefully handle non-perl
      executables with older versions of the module.
    - Require libselinux 2.0.99 for baseline API, remove static linking
      support, use pkg-config unconditionally, and perform refinement checks
      only if available.
    - Check for the required minimal perl version.
    - Use builddir instead of CURDIR in man Makefile.am.
    - Use cp with -R instead of -r (the former is more portable and not
      marked as deprecated by POSIX).
    - Print an actual newline instead of a literal \n in lcov output.

  [ Updated man pages translations ]
  * German (Helge Kreutzmann).
