@@ -169,8 +169,7 @@ test_path_quote(void)
 	free(dst);
 }
 
-static void
-test(void)
+TEST_ENTRY(test)
 {
 	test_plan(41);
 
