@@ -285,8 +285,7 @@ test_version_parse(void)
 	/* FIXME: Complete. */
 }
 
-static void
-test(void)
+TEST_ENTRY(test)
 {
 	test_plan(190);
 
