@@ -82,6 +82,10 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
       verify digests too. Prompted by Johannes Schauer <josch@debian.org>.
     - Document the behavior for consecutive calls to Dpkg perl module parse()
       methods. Prompted by Johannes Schauer <josch@debian.org>.
+  * Test suite:
+    - Make test main function a TEST_ENTRY macro. This avoids confusing
+      coverage programs, as the file that actually contains the main function
+      is the test itself.
   * Build system:
     - Add support for profiling perl modules.
     - Clean up compiler and linker automatic flag usage in configure.
